k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talentmatch-service
spec:
  selector:
    app: talentmatch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
