k8s/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: talentmatch-canary-ingress
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10" # 10% du trafic ira ici
spec:
  rules:
    - host: talentmatch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: talentmatch-canary-service # Le service de ta v2
                port:
                  number: 80
